# restaurant-sales-forecasting

./: .gitignore  AUDIT_EVIDENCE_CHECKLIST.txt  AUDIT_PROMPT_FOR_GPT_5.2_PRO.md  AUDIT_PROMPT_V5.4.3_FINAL.md  AUDIT_PROMPT_V5.4.3_RESUBMISSION.md  AUDIT_REQUEST_FOR_CHATGPT_5.2_PRO.md  AUDIT_RESOLUTION.md  AUDIT_SUBMISSION_SUMMARY.txt  CHRONOS_INTEGRATION.md  FORECAST_ADJUSTMENT_NOTES.md  HOW_TO_SUBMIT_TO_GPT_5.2_PRO.md  HOW_TO_SUBMIT_V5.4.3_TO_GPT_5.2_PRO.md  IMPLEMENTATION_DEVIATIONS.md  IMPLEMENTATION_SUMMARY.md  PEAK_DAY_UPGRADE_REPORT.md  PROMPTS_v2.md  PROMPT_FOR_CHATGPT_5.2_PRO_FINAL.txt  V5.4.2_COMPLETION_REPORT.md  V5.4.2_DELIVERABLES.txt  V5.4.2_PROGRESS_REPORT.md  V5.4_AUDIT_REPORT.md  V5.4_CHANGELOG.md  V5.4_DELIVERABLES_SUMMARY.txt  V5.4_EXECUTIVE_SUMMARY.md  V5.4_FINAL_REPORT.md  V5.4_NEXT_STEPS.md  V5.4_PROGRESS.md  V5.4_SUMMARY.md  pyproject.toml  run_pipeline.sh  test_v5_4_integration.py
V5.4.1_AUDIT_PACKAGE/: PACKAGE_MANIFEST.txt  README.md  V5.4.1_COMPLETION_REPORT.md  V5.4.1_IMPLEMENTATION_INSTRUCTIONS.txt
configs/: config.yaml
documentation/: AUTOMATED_EVENT_RESEARCH.md  EVENT_AUTOMATION_QUICKSTART.md  GPT_5.2_PRO_SECOND_RESPONSE_ANALYSIS.md  README.md  V5.4.2_WORKLOG.md  V5.4.3_BASELINE_EVIDENCE.md  V5.4.3_RESUBMISSION_SUMMARY.md  V5.4.4_CHANGELOG.md  V5.4.4_IMPLEMENTATION_SUMMARY.md  V5.4.5_CHANGELOG.md  V5.4.6_CHANGELOG.md  V5.4.7_CHANGELOG.md  YEAR_AGNOSTIC.md
scripts/: automate_event_research.py  compare_forecasts.py  research_events_simple.py  validate.py
tests/: test_baseline_year_from_sales.py  test_build_datasets_no_yaml_load.py  test_config_resolution.py  test_dynamic_us_holidays_years.py  test_events_ingest_preserves_future_year_columns.py  test_forecast_window_param.py  test_generic_naming_wrappers.py  test_holiday_distance_features.py  test_no_debug_main_blocks_in_library.py  test_no_hardcoded_2026_windows.py  test_recompute_uplift_priors_flag.py  test_recurring_mapping_year_generic.py  test_resolve_year_path.py  test_run_log_fields.py  test_run_pipeline_default_chronos_enabled.py  (+4 more)
(+301 files in other folders)
